Issue 94 Changes to summary pages - switched row dividers to light gray - moved descriptions to the right of the name - limits description to 100 visible characters in the summary pages - changed description from a text to a textarea and limited input to 256 characters in the new and edit pages - changed the gear icon to the fa-exchange icon which is two parallel arrows pointing in opposite directions

--- a/vdb-bench-assembly/plugins/vdb-bench-dataservice/content/css/styles.less
+++ b/vdb-bench-assembly/plugins/vdb-bench-dataservice/content/css/styles.less
@@ -257,7 +257,7 @@
 .ds-summary-results .list-group-item:first-child,
 .svcsource-summary-results .list-group-item:first-child {
     margin-bottom: 0.25em;
-    border-top: 1px solid #39a5dc;
+    border-top: 1px solid #d8d8d8;
 }
 
 .ds-summary-results .list-group-item:hover,
